--- a/element_defaults.css
+++ b/element_defaults.css
@@ -1,4 +1,16 @@
+/* Headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 /* FOOTER */
 :where(footer ul) {
   list-style: none;
+  padding-inline-start: 0;
 }
