--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
   --fs-300: 1.25rem; /* 20px */
   --fs-400: 1.375rem; /* 22px */
   --fs-600: 2.25rem; /* 36px */
+  --fs-640: 2.8125rem; /* 45px */
+  --fs-650: 3.125rem; /* 50px */
   --fs-700: 3.75rem; /* 60px */
   --fs-800: 4.375rem; /* 70px */
   --fs-900: 6rem; /* 96px */
@@ -64,8 +66,8 @@
 }
 
 .fs-title-md {
-  font-size: var(--fs-700);
-  line-height: var(--fs-700);
+  font-size: var(--fs-650);
+  line-height: var(--fs-640);
 }
 
 .fs-title-lg {
@@ -93,6 +95,7 @@
 
 .bg-dark-100 {
   background-color: var(--clr-dark-100);
+  color: var(--clr-white);
 }
 
 .bg-btn-hover:hover {
@@ -132,6 +135,45 @@
   width: 100%;
 }
 
+.flex {
+  display: flex;
+  gap: 1.25rem;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+/* gallery section */
+.gallery-section {
+  padding-block: 7.5rem;
+}
+
+:where(.gallery-section img) {
+  width: 100%;
+}
+
+/* Components */
+.footer {
+  padding-inline: 2rem;
+  padding-block: 3rem;
+}
+
+:where(.footer p) {
+  font-size: var(--fs-100);
+}
+
+.grid-card {
+  padding-inline: 1.5rem;
+  padding-block: 3rem;
+}
+
+.hero-image {
+  order: -1;
+}
+
 /* tablet media query */
 @media screen and (min-width: 480px) {
   .fs-title-xl {
@@ -141,9 +183,15 @@
   .fs-body-md {
     font-size: var(--fs-400);
   }
+
+  .hero-image {
+    order: 0;
+  }
 }
 
-/* Your day section */
-:where(.your-day-section img) {
-  width: 100%;
+@media screen and (min-width: 768px) {
+  .fs-title-md {
+    font-size: var(--fs-700);
+    font-size: var(--fs-700);
+  }
 }
