--- a/style.css
+++ b/style.css
@@ -20,11 +20,14 @@
   --fs-300: 1.25rem; /* 20px */
   --fs-400: 1.375rem; /* 22px */
   --fs-600: 2.25rem; /* 36px */
-  --fs-640: 2.8125rem; /* 45px */
   --fs-650: 3.125rem; /* 50px */
   --fs-700: 3.75rem; /* 60px */
   --fs-800: 4.375rem; /* 70px */
   --fs-900: 6rem; /* 96px */
+
+  --lh-500: 1.75rem; /* 28px */
+  --lh-640: 2.8125rem; /* 45px */
+  --lh-660: 3.4375rem; /* 55px */
 }
 
 /* Fonts */
@@ -52,32 +55,42 @@
 
 .fs-body-sm {
   font-size: var(--fs-200);
-  line-height: 1.75rem;
+  line-height: var(--lh-500);
 }
 
 .fs-body-md {
   font-size: var(--fs-200);
-  line-height: 2rem;
+  line-height: var(--lh-500);
+}
+
+.fs-title-xs {
+  font-size: var(--fs-300);
+  line-height: var(--fs-300);
+  text-transform: uppercase;
 }
 
 .fs-title-sm {
   font-size: var(--fs-600);
   line-height: var(--fs-600);
+  text-transform: uppercase;
 }
 
 .fs-title-md {
   font-size: var(--fs-650);
-  line-height: var(--fs-640);
+  line-height: var(--lh-640);
+  text-transform: uppercase;
 }
 
 .fs-title-lg {
   font-size: var(--fs-800);
   line-height: var(--fs-800);
+  text-transform: uppercase;
 }
 
 .fs-title-xl {
-  font-size: var(--fs-800);
-  line-height: 5.5rem;
+  font-size: var(--fs-700);
+  line-height: var(--lh-660);
+  text-transform: uppercase;
 }
 
 .fs-button {
@@ -149,6 +162,13 @@
 /* gallery section */
 .gallery-section {
   padding-block: 7.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.gallery-section img:first-of-type {
+  order: -1;
 }
 
 :where(.gallery-section img) {
@@ -159,15 +179,21 @@
 .footer {
   padding-inline: 2rem;
   padding-block: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.375rem;
 }
 
 :where(.footer p) {
   font-size: var(--fs-100);
 }
 
-.grid-card {
+.gallery-section__text-card {
   padding-inline: 1.5rem;
   padding-block: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .hero-image {
