--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@
   --fs-200: 1.125rem; /* 18px */
   --fs-300: 1.25rem; /* 20px */
   --fs-400: 1.375rem; /* 22px */
+  --fs-575: 2rem; /* 32px */
   --fs-600: 2.25rem; /* 36px */
   --fs-650: 3.125rem; /* 50px */
+  --fs-675: 3.4375rem; /* 55px */
   --fs-700: 3.75rem; /* 60px */
   --fs-800: 4.375rem; /* 70px */
   --fs-900: 6rem; /* 96px */
@@ -53,6 +55,10 @@
   color: var(--clr-dark-100);
 }
 
+.fc-accent {
+  color: var(--clr-accent);
+}
+
 .fs-body-sm {
   font-size: var(--fs-200);
   line-height: var(--lh-500);
@@ -70,8 +76,8 @@
 }
 
 .fs-title-sm {
-  font-size: var(--fs-600);
-  line-height: var(--fs-600);
+  font-size: var(--fs-575);
+  line-height: var(--fs-575);
   text-transform: uppercase;
 }
 
@@ -82,8 +88,8 @@
 }
 
 .fs-title-lg {
-  font-size: var(--fs-800);
-  line-height: var(--fs-800);
+  font-size: var(--fs-650);
+  line-height: var(--lh-640);
   text-transform: uppercase;
 }
 
@@ -129,6 +135,9 @@
   background-color: var(--clr-dark-100);
   padding-block: 1.5rem;
   padding-inline: 2rem;
+  text-transform: uppercase;
+  font-size: var(--fs-300);
+  letter-spacing: 0.1rem;
 }
 
 .btn__icon-container {
@@ -218,6 +227,12 @@
     font-size: var(--fs-900);
   }
 
+  .fs-title-lg {
+    font-size: var(--fs-675);
+    line-height: var(--fs-650);
+    text-transform: uppercase;
+  }
+
   .fs-body-md {
     font-size: var(--fs-400);
   }
@@ -228,8 +243,20 @@
 }
 
 @media screen and (min-width: 768px) {
+  .fs-title-lg {
+    font-size: var(--fs-800);
+    line-height: var(--fs-800);
+    text-transform: uppercase;
+  }
+
   .fs-title-md {
     font-size: var(--fs-700);
     font-size: var(--fs-700);
+  }
+
+  .fs-title-sm {
+    font-size: var(--fs-600);
+    line-height: var(--fs-600);
+    text-transform: uppercase;
   }
 }
